# swganh-modern

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml
data/config/: server.json
data/sql/: 01-init.sql
docker/dev/: Dockerfile.dev  docker-compose.dev.yml
docs/getting-started/: development-setup.md  quickstart.md
scripts/: build.sh  dev.sh  setup.sh  start.sh
src/core/: CMakeLists.txt  logger.cpp  logger.hpp  types.hpp
src/core/network/: udp_server.cpp
src/network/: udp_server.cpp  udp_server.hpp
src/servers/login/: login_server.cpp  login_server.hpp  main.cpp
swganh-simple/: CMakeLists.txt
test/: test_soe_protocol.cpp
tmp/swganh-simple/: CMakeLists.txt
tmp/swganh-simple/src/core/: account_manager.cpp  account_manager.hpp  config.hpp  logger.cpp  logger.hpp  types.hpp
tmp/swganh-simple/src/core/network/: soe_protocol.cpp
tmp/swganh-simple/src/network/: CMakeLists.txt  soe_protocol.hpp  udp_server.cpp  udp_server.hpp
tmp/swganh-simple/src/servers/: main.cpp
tmp/swganh-simple/src/servers/login/: main.cpp  swg_protocol.cpp  swg_protocol.hpp
workflows/: docker.yml
